--- a/source/stylesheets/base/_common.scss
+++ b/source/stylesheets/base/_common.scss
@@ -14,7 +14,7 @@ html {
 body {
   font-family: 'Lato', Arial, Helvetica, sans-serif;
   font-size: $base-font;
-  color: black;
+  color: blue;
   background: white;
 }
 
